--- a/src/pages/my-info/my-info.html
+++ b/src/pages/my-info/my-info.html
@@ -21,7 +21,7 @@
     </ion-item>
   </ion-list>
   <button small block color="danger" ion-button icon-end (click)="resetMyInfo()">
-    Reset my info
-    <ion-icon name="remove-circle"></ion-icon>
+    Logout
+    <ion-icon name="exit"></ion-icon>
   </button>
 </ion-content>
